# ldgr-programbench

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  adapter-database-contract.json  adapter-resources.json  adapter.toml
.github/workflows/: release.yml
commands/: ldgr-programbench.md
docs/: public-scope.md
docs/examples/: public-fixture-smoke-evidence.md  public-fixture-workflow.md
docs/historical/: classifications.json  cleanroom-boundary.md  leakage-rule.md  reproduction-contract.md  source-manifest.json
extensions/: ldgr-programbench.ts
fixtures/tiny-addition/: README.md  input.json
scripts/: run-public-fixture-smoke.sh  validate-tiny-addition.py
skills/programbench-reproduction/: SKILL.md
src/: main.rs
