[package]
name = "ldgr-programbench"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/hydra-dynamix/ldgr-programbench"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[workspace]
